--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <h1>Google LLC é uma empresa</h1>
 <p> multinacional de softwares e <strong>serviços</strong> online fundada em 1998 na cidade norte-americana de Menlo Park</p>
-, que lucra principalmente através da publicidade pelo AdWords. A Google é a principal subsidiária da Alphabet Inc.
+, que <em>lucra principalmente</em> através da publicidade pelo AdWords. A Google é a principal subsidiária da Alphabet Inc.
