--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
-<h1>Google LLC é uma empresa</h1>
-<p> multinacional de softwares e <strong>serviços</strong> online fundada em 1998 na cidade norte-americana de Menlo Park</p>
-, que <em>lucra principalmente</em> através da publicidade pelo AdWords. A Google é a principal subsidiária da Alphabet Inc.
+CÓDIGOS HTML:
+<head>
+    <meta charset="UTF-8">
+    <title> Site da Nunes </title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+   
+<body>
+
+    <h1 class="titulo"> Sobre o site da Nunes </h1>
+    <p class="paragrafo">Jogadora de <strong>Volêi</strong> do Colégio CEMA</p>
+
+</body>
+
